@@ -14,14 +14,16 @@ Changes to CombatUtils:
  - Added spawnShipOrWingDirectly(String variantId, FleetMemberType type,
    FleetSide side, float combatReadiness, Vector2f location, float facing)
 Changes to DrawUtils:
- - Added drawCircle(float centerX, float centerY, float radius,
-   int numSegments, boolean drawFilled)
+ - Added drawEllipse(float centerX, float centerY, float width, float height,
+   float angleOffset, int numSegments, boolean drawFilled)
 Changes to MathUtils:
  - isPointWithinCircle() now returns true for points along the circumference
  - Optimized getPointsAlongCircumference() and large numbers of points
  - Added getMidpoint(Vector2f point1, Vector2f point2)
  - Added getPointOnEllipse(Vector2f ellipseCenter, float ellipseWidth,
    float ellipseHeight, float ellipseAngleOffset, float angle)
+ - Added getRandomPointOnEllipse(Vector2f ellipseCenter, float ellipseWidth,
+   float ellipseHeight, float ellipseAngleOffset)
  - Added isPointWithinEllipse(Vector2f point, Vector2f ellipseCenter,
    float ellipseWidth, float ellipseHeight, float ellipseAngleOffset)
 Changes to StringUtils:
